# python-tekito

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  dependencies.py  main.py
app/core/: config.py
app/domain/: __init__.py  dashboard.py  entities.py
app/infrastructure/: __init__.py  database.py  models.py
app/repositories/: __init__.py  project_repository.py  task_repository.py
app/routers/: __init__.py  api.py  web.py
app/schemas/: __init__.py  api.py
app/services/: __init__.py  dashboard_service.py  project_service.py  task_service.py
app/static/: style.css
app/templates/: base.html  index.html  project_detail.html
docs/: コードリーディングガイド.md
tests/: test_api_and_web.py  test_dashboard_service.py
